Switch default garbage collector to Generational ZGC